Stemming for 18 languages added
- Stemming for 18 languages added: new property `IndexMetaObject.stemmer: StemmerType`
- Allow to specify the markup tags to insert **before** and **after** each highlighted term. Default is "<b>" "</b>" (by @DanLLC).
- Fixed read_f32() in utils.rs
- See [CHANGELOG.md](https://github.com/SeekStorm/SeekStorm/blob/main/CHANGELOG.md) for details.
